examples/test/conf/HTTPRoute/Protocol/WebSocket/EndpointSlice.yaml
# WebSocket 
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: test-websocket
  namespace: edgion-test
  labels:
    kubernetes.io/service-name: test-websocket
addressType: IPv4
ports:
  - port: 30005
    protocol: TCP
endpoints:
  - addresses:
      - "127.0.0.1"
    conditions:
      ready: true
