examples/test/conf/HTTPRoute/Protocol/WebSocket/Service.yaml
# WebSocket 
apiVersion: v1
kind: Service
metadata:
  name: test-websocket
  namespace: edgion-test
spec:
  ports:
    - port: 30005
      targetPort: 30005
      protocol: TCP
